# trusted-network-registry

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: authoritative-source-check.yml  check.yml
deploy/synology/: README.md  config.example.toml  docker-compose.example.yml  publisher.env.example
docs/: architecture.md  first-real-operator-run.md  followups.md  operations.md  provider-assumptions.md  registry-schema.md  security.md  synology-deployment.md  terraform-integration.md
examples/: publisher-config.example.toml  registry.example.json
examples/terraform-consumer-local-file/: README.md  main.tf
examples/terraform-consumer-tfvars-json/: README.md  main.tf
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
schemas/: publisher-config.schema.json  registry.schema.json
scripts/: run-local-publish.example.sh
src/trusted_network_registry/: __init__.py  cli.py  config.py  object_storage.py  publish.py  redaction.py  registry.py  schema.py
src/trusted_network_registry/discovery/: __init__.py  meraki.py  static.py
tests/fixtures/sanitized/: meraki-uplinks.example.json  registry.v1.example.json
tests/unit/: test_cli.py  test_meraki.py  test_object_storage.py  test_public_safety.py  test_registry.py  test_schema_files.py
